--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,16 +1,22 @@
 <div class="navbar bg-base-100 shadow-sm sticky top-0 z-50">
     <div class="flex-1">
-        <a href="/landing" class="btn btn-ghost text-xl text-primary font-bold">Mantri Duit 💸</a>
+        <a href="/" class="btn btn-ghost text-xl text-primary font-bold">Mantri Duit 💸</a>
     </div>
-    <div class="flex-none">
+    <div class="flex-none gap-2">
         {% if user.is_authenticated %}
+        <a href="{% url 'chat_page' %}" class="btn btn-ghost btn-circle text-slate-600">
+            <div class="indicator">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" /></svg>
+                <span class="badge badge-xs badge-primary indicator-item"></span>
+            </div>
+        </a>
         <div class="dropdown dropdown-end">
             <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                 <div class="w-10 rounded-full bg-teal-100 text-teal-800 flex items-center justify-center font-bold">
                     {{ user.username|slice:":2"|upper }}
                 </div>
             </div>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-1 p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a>Profile</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
