--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,26 +1,10 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<div class="text-center py-10 space-y-6">
-    <h1 class="text-4xl font-extrabold text-teal-700">Gak Zaman<br>Catat Buku!</h1>
-    <p class="text-lg text-slate-600">
-        Foto notanya, biar AI yang catat duitnya. 
-        <br>
-        <span class="font-bold text-orange-500">Mantri Duit</span> siap marahin kalau kamu boros.
-    </p>
     
-    <div class="flex flex-col gap-3 mt-8">
-        <a href="/login" class="btn btn-primary btn-lg w-full shadow-lg">Mulai Sekarang</a>
-        <button class="btn btn-outline w-full">Pelajari Dulu</button>
-    </div>
-    
-    <div class="mockup-phone border-primary mt-10">
-        <div class="camera"></div> 
-        <div class="display">
-            <div class="artboard artboard-demo phone-1 bg-teal-50">
-                Hi, Bos! Hari ini habis 500rb buat apa aja? 🤨
-            </div>
-        </div>
-    </div>
-</div>
+{% extends 'layout/base-landing.html' %} 
+{% block content %} 
+{% include 'partials/landingpage/hero-section.html' %} 
+{% include 'partials/landingpage/infografis-section.html' %} 
+{% include 'partials/landingpage/feature-section.html' %} 
+{% include 'partials/landingpage/how-to-use.html' %} 
+{% include 'partials/landingpage/faq-section.html' %} 
 {% endblock %}
+
