--- a/templates/partials/landingpage/infografis-section.html
+++ b/templates/partials/landingpage/infografis-section.html
@@ -1,6 +1,6 @@
 <section id="masalah" class="py-24 px-4 sm:px-6 lg:px-8 bg-white relative">
   <div
-    class="absolute inset-0 bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:24px_24px] pointer-events-none"
+    class="absolute inset-0 bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-size-[24px_24px] pointer-events-none"
   ></div>
 
   <div class="max-w-7xl mx-auto relative z-10">
@@ -32,7 +32,7 @@
         class="font-montserrat font-extrabold text-3xl sm:text-4xl text-slate-900 mb-6 leading-tight"
       >
         Kenapa UMKM Sulit
-        <span class="text-red-600 decoration-wavy underline decoration-red-200"
+        <span class="text-red-600"
           >Berkembang?</span
         >
       </h2>
@@ -181,7 +181,7 @@
     </div>
 
     <div
-      class="rounded-3xl bg-gradient-to-br from-emerald-600 to-teal-800 p-8 sm:p-12 text-center text-white relative overflow-hidden shadow-2xl"
+      class="rounded-3xl bg-linear-to-br from-emerald-600 to-teal-800 p-8 sm:p-12 text-center text-white relative overflow-hidden shadow-2xl"
     >
       <div
         class="absolute top-0 right-0 -mr-12 -mt-12 w-48 h-48 bg-white opacity-10 rounded-full blur-2xl"
