--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %} {% block layout %}
 <div
-  class="min-h-screen w-full flex items-center justify-center bg-slate-100 p-4 font-poppins"
+  class="min-h-screen w-full flex items-center justify-center bg-slate-100 p-4 font-poppins relative overflow-hidden"
 >
   <div
     class="absolute inset-0 z-0 pointer-events-none"
