--- a/templates/layout/base-dashboard.html
+++ b/templates/layout/base-dashboard.html
@@ -1,4 +1,6 @@
-{% extends 'layout/base.html' %} {% load static %} {% block layout %}
+{% extends 'layout/base.html' %} 
+{% load static %} 
+{% block layout %}
 <div class="drawer lg:drawer-open font-poppins">
   <input id="dashboard-drawer" type="checkbox" class="drawer-toggle" />
 
@@ -85,11 +87,11 @@
           </label>
           <ul
             tabindex="0"
-            class="dropdown-content z-[1] menu p-2 shadow-lg bg-white rounded-xl w-52 border border-slate-100 mt-2"
+            class="dropdown-content z-1 menu p-2 shadow-lg bg-white rounded-xl w-52 border border-slate-100 mt-2"
           >
             <li>
               <a
-                href="#"
+                href="{% url 'profile_settings' %}"
                 class="flex items-center gap-3 text-slate-600 hover:text-teal-600"
               >
                 <svg
@@ -111,7 +113,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="{% url 'settings_page' %}"
                 class="flex items-center gap-3 text-slate-600 hover:text-teal-600"
               >
                 <svg
@@ -165,7 +167,7 @@
       </div>
     </header>
 
-    <main class="flex-1 overflow-y-auto p-4 md:p-8">
+    <main class="flex-1 overflow-y-auto p-4 md:p-8" id="main-content">
       {% block content %}{% endblock %}
     </main>
   </div>
@@ -179,4 +181,5 @@
     {% include 'partials/dashboard/sidebar.html' %}
   </div>
 </div>
+<script defer src="{% static 'js/dashboard.js' %}"></script>
 {% endblock %}
