--- a/templates/layout/base-landing.html
+++ b/templates/layout/base-landing.html
@@ -1,11 +1,11 @@
-
 {% extends 'layout/base.html' %} 
 
 {% block layout %}
     {% include 'partials/landingpage/navbar.html' %}
 
-    <main class="flex-grow min-h-screen">
-        {% block content %}{% endblock %}
+    <main class="grow min-h-screen">
+        {% block content %}
+        {% endblock %}
     </main>
 
     {% include 'partials/landingpage/footer.html' %}
