--- a/templates/partials/landingpage/navbar.html
+++ b/templates/partials/landingpage/navbar.html
@@ -172,7 +172,7 @@
         {% else %}
         <a
           href="/login"
-          class="btn bg-teal-600 hover:bg-teal-700 text-white border-none font-montserrat font-semibold rounded-lg shadow-md px-6 min-h-10 h-10"
+          class="btn bg-primary-teal hover:bg-teal-700 border-none text-white px-6 h-10 min-h-10 font-montserrat rounded-xl shadow-lg shadow-teal-100 hover:shadow-teal-200 transition-all transform hover:-translate-y-1 text-base"
         >
           Masuk
         </a>
